
- Bokeh is for interactive visualization -- if your data is so complex (or you haven't yet found the "message" in your data), then use Bokeh to create interactive visualizations that will allow your viewers to explore the data themselves

*new_hist.py
Trying out seaborn api for a better data visualization.
Stuff to try:
- COLH dataviz
- Time-series walk
- Growth visualization


*mean-reversion.py
First trying to understand the structure, it involves event.py, streaming.py and trading.py

22/04/2017
Resumed working
*mean-reversion.py
Implementing Hurst exponent algorithm


23/04/2017
Done with Hurst, created a Hurst.py so that in the future we can use Hurst test for different strategies
Some helpful links:
https://www.quantopian.com/posts/hurst-exponent
https://www.quantopian.com/posts/some-code-from-ernie-chans-new-book-implemented-in-python

24/04/2017
Reorganize GitHub into folders for easy future reference. 
#TODO: 
- change import in major .py programs to reflect new changes. 
- create a readme for statistical tests for instructions.

25/04/2017
*statisticaltest.py
Implementing Johansen test, ADF and CADF test

27/04/2017
Implement portfolio management
Problem:
- BEWARE: Not tested with all cases. UNSTABLE. But provide a good framework
regardless for future strategies. 

28/04/2017
update position.py using Decimal

06/05/2017
turn new_hist.py into a module for implementation in BacktestBase.py 
new change: mv new_hist.py price_retrieval.py
Problem:
- Not tested. Need debug. 
04/05/2017
Finished Johansen

Remember to install johansen and stock API

05/05/2017
Cleaned up new_hist.py, vectorized file will import historical data from new_hist.py
Working on CAPM test and vectorized backtesting

06/05/2017
turn new_hist.py into a module for implementation in BacktestBase.py
new change: mv new_hist.py price_retrieval.py
Problem:
- Not tested. Need debug.