@@ -153,3 +153,8 @@ turn new_hist.py into a module for implementation in BacktestBase.py
 new change: mv new_hist.py price_retrieval.py
 Problem:
 - Not tested. Need debug.
+
+08/05/2017
+*VectMomentum.py
+- Not finished, needs parameterizing and change yahoo data with Oanda data
+- Needs to find a way to export to files or plots
